<resources>
    <string name="app_name">Crystalize</string>
    <string name="crystalize">Crystalize</string>
    <string name="crystalize_image">crystalize_image</string>
    <string name="answer">Answer</string>
    <string name="okay">Okay</string>
    <string name="hint">Hint</string>
    <string name="tick_cross_image">Tick Cross Image</string>
    <string name="correct">CORRECT!</string>
    <string name="next">Next</string>

    <string-array name="Questions">
        <item>What is the letter A in the phonetic alphabet?</item>
        <item>What is the letter B in the phonetic alphabet?</item>
        <item>What is the letter C in the phonetic alphabet?</item>
    </string-array>
    <string-array name="Answers">
        <item>alpha</item>
        <item>bravo</item>
        <item>charlie</item>
    </string-array>
    <string-array name="Hints">
        <item>A tough, domineering bloke</item>
        <item>Well done!</item>
        <item>Snoopy\'s mate</item>
    </string-array>
    <string name="title_activity_menu">Menu</string>


</resources>
