<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:background="#764B8E"
    android:orientation="vertical"
    android:layout_gravity="center"
    tools:context=".questions">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-thin"
        android:textColor="#440027"
        android:textSize="30sp"
        android:id="@+id/question"
        android:layout_marginTop="100dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#9775AA"
        android:inputType="text"
        android:textSize="22sp"
        android:layout_margin="10dp"
        android:hint="@string/answer"
        android:id="@+id/answer"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/okay"
            android:layout_margin="2dp"
            android:padding="2dp"
            android:onClick="onAnswerClick"
            style="@style/Widget.AppCompat.Button.Colored"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:layout_margin="2dp"
            android:text="@string/hint"
            android:onClick="onHintClick"
            style="@style/Widget.AppCompat.Button.Colored"
            />
    </LinearLayout>

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:id="@+id/tickcross"
        android:src="@drawable/weirdtick"
        android:contentDescription="@string/tick_cross_image" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-thin"
        android:textColor="#440027"
        android:text="@string/correct"
        android:textSize="30sp"
        android:id="@+id/correctornot"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:layout_marginTop="50dp"
        android:padding="2dp"
        android:layout_gravity="center"
        android:id="@+id/nextbutton"
        android:onClick="onNextClick"
        style="@style/Widget.AppCompat.Button.Colored"/>

</LinearLayout>